2006-06-19  Albert Chu  <chu11@llnl.gov>

	* src/libs/common/hostlist.c: Update to newest library.
	
2006-04-14  Albert Chu  <chu11@llnl.gov>

	* src/libs/common/error.h, src/libs/common/error.c: Add forgotten
	copyright headers.
	
2006-02-28  Albert Chu  <chu11@llnl.gov>

	* src/libs/include/Makefile.am: Fix typo.

	* config/ac_shutdown.m4: Fix typos.

	* cerebro.spec.in: Add shutdown module.
	
2006-02-27  Albert Chu  <chu11@llnl.gov>

	* src/cerebrod/cerebrod_listener_data.c (_setup_monitor_modules):
	Support multiple metrics in metric module.  Use new destroy
	function.

	* src/cerebrod/cerebrod_listener_data.c (cerebrod_monitor_module_destroy):
	new function.

	* src/modules/clusterlist/cerebro_clusterlist_hostsfile.c
	(hostsfile_clusterlist_node_in_cluster): Fix bug.

	* src/modules/clusterlist/cerebro_clusterlist_hostsfile.c
	(list_strcmp): New function.

	* src/libs/modules/metric_module.c
	(metric_module_send_heartbeat_function_pointer): Fix return bug.

2006-02-27  Albert Chu  <chu11@llnl.gov>
	
	* src/cerebrod/cerebrod_speaker.c (cerebrod_send_heartbeat): Fix
	port assignment bug.

	* src/modules/metric/cerebro_metric_shutdown.c
	(_metric_shutdown_handler): Fix corner case when multiple
	SIGTERM/SIGINT signals are received.

	* Beginning preparations to support multiple metrics logged by
	same monitor module.

	* src/cerebrod/cerebrod_listener_data.h,
	src/cerebrod/cerebrod_listener_data.c (_setup_monitor_modules),
	src/libs/include/cerebro/cerebro_monitor_module.h
	(cerebro_monitor_module_info), src/libs/modules/monitor_module.c
	(_monitor_module_cb): Rename "metric_name" to "metric_names"
	appropriately.

	* src/cerebrod/cerebrod_listener_data.c (_monitor_update): Update
	call to new API.

	* src/libs/include/cerebro/cerebro_monitor_module.h
	(Cerebro_monitor_metric_name): Renamed typedef to
	Cerebro_monitor_metric_names.

	* src/libs/include/cerebro/cerebro_monitor_module.h
	(Cerebro_monitor_metric_update): Updated with additional