@@ -1,3 +1,7 @@
+2006-06-26  Albert Chu  <chu11@llnl.gov>
+
+	* config/ac_cerebro_module_dir.m4: Cleanup using better workaround.
+	
 2006-06-19  Albert Chu  <chu11@llnl.gov>
 
 	* src/libs/common/hostlist.c: Update to newest library.
